maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:59: error: '=' expected but ';' found.
  def bagglePos:Array[int] = (0,0)
^